--- a/Main_Page.html
+++ b/Main_Page.html
@@ -9,6 +9,8 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+  <!-- Website css -->
   <link rel="stylesheet" href="css.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -20,19 +22,24 @@
 <!-- Main Website code -->
 
 <body>
-  <!-- Nav that will disappear -->
+  <!-- Creates the Nav that will disappear -->
   <nav class="navbar navbar-expand-lg navbar-light first-navbar">
+    <!-- Uses the class container fluid to have the navbar expand all the page -->
     <div class="container-fluid ">
+      <!--Creates the logo image -->
       <a class="navbar-brand"><img class="Logo" src="./Images/Logo.jpeg" alt=""></a>
-      <div class="navbar-nav  first-navbar">
+      <!-- Have a Separate div to add the Group name in the middle of the navbar -->
+      <div class="navbar-nav  first-navbar d-none d-md-block">
         <p>Group TRUSTAUTO</p>
       </div>
+      <!-- Creates the Components justified to the end of the page such as Account information and the cart item -->
       <div class="justify-content-end">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 first-navbar">
           <li class="nav-item ">
             <a class="nav-link first-navbar" aria-current="page" href="#"> <i class="fa-solid fa-user"></i>
               Login/Register</a>
           </li>
+          <!-- More research here is needed since I am not sure how appearing and disappearing components is done for now it's like this but nothing activates it -->
           <li class="nav-item dropdown d-none">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
@@ -46,6 +53,7 @@
               <li><a class="dropdown-item" href="#">Sign Out</a></li>
             </ul>
           </li>
+          <!-- Cart icon -->
           <li>
             <a class="nav-link first-navbar" aria-current="page" href="#"> <i class="fa-solid fa-cart-shopping">
               </i></a>
@@ -55,16 +63,21 @@
     </div>
   </nav>
 
-  <!-- Navbar that will stay on top -->
+  <!-- Creates the Navbar that will stick to the top -->
   <nav class="navbar sticky-top navbar-expand-lg navbar-light second-navbar">
+    <!-- Uses the class container fluid to have the navbar expand all the page -->
     <div class="container-fluid">
+      <!-- Adds the Company name to the navbar -->
       <a class="navbar-brand" href="#">BarcelParts</a>
+      <!-- Adds the hamburger button that will appear when the page is shrunken to display the items in the navbar so it looks cleaner in small screens -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+      <!-- Items that will be displayed in the navbar that will go inside the Hamburger button when page is shrunken -->
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <!-- Adds a navbar dropdown which will have all the categories in the Website -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
@@ -78,7 +91,7 @@
               <li><a class="dropdown-item" href="#">Light</a></li>
             </ul>
           </li>
-
+          <!-- Other navbar items that will appear in teh navbar -->
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="#">Catalog</a>
           </li>
@@ -89,7 +102,7 @@
             <a class="nav-link" href="#">About</a>
           </li>
         </ul>
-
+        <!-- Adds the research form  -->
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
@@ -99,38 +112,42 @@
     </div>
   </nav>
 
+  <!-- Main Content of the Webpage -->
 
   <!-- Carousel -->
   <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+    <!-- Adds the small lines to indicate which image is showing at the bottom  -->
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true"
         aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
+
     <div class="carousel-inner">
+      <!-- Adds the first image to be displayed  -->
       <div class="carousel-item active">
         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
           preserveAspectRatio="xMidYMid meet" focusable="false">
-          <rect width="100%" height="100%" fill="#777" />
           <image width="100%" xlink:href="Images/trust.svg" x="0" y="0" />
         </svg>
       </div>
+      <!-- Adds the second image to be displayed -->
       <div class="carousel-item">
         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
           preserveAspectRatio="xMidYMid slice" focusable="false">
-          <rect width="100%" height="100%" fill="#777" />
           <image width="100%" xlink:href="Images/frontstore.svg" x="0" y="0" />
         </svg>
       </div>
+      <!-- Adds the third image to be displayed -->
       <div class="carousel-item">
         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
           preserveAspectRatio="xMidYMid slice" focusable="false">
-          <rect width="100%" height="100%" fill="#777" />
           <image width="100%" xlink:href="Images/trust-1.svg" x="0" y="0" />
         </svg>
       </div>
     </div>
+    <!-- Adds the buttons to go forwards and backwards in the images  -->
     <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
@@ -141,12 +158,15 @@
     </button>
   </div>
 
-  <!-- Main Content -->
-  <div class="container">
+  <!-- Items that will not be displayed with all width of the Page -->
+  <div class="container-md">
     <!-- Trusted Brands Display -->
     <h2>Trusted Brands</h2>
+    <!-- Adds a line to make it more styled   -->
     <hr class="breakline">
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 ">
+    <!-- Creates a div to group a class of Displayed items  -->
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-5">
+      <!-- Displayed item with the image and Title  -->
       <div class="col item-display">
         <div class="card shadow-sm">
           <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg"
@@ -161,7 +181,7 @@
           <a class="brand" href="#">BluePrint</a>
         </div>
       </div>
-
+      <!-- Displayed item with the image and Title  -->
       <div class="col item-display">
         <div class="card shadow-sm">
           <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg"
@@ -176,7 +196,7 @@
           <a class="brand" href="#">BluePrint</a>
         </div>
       </div>
-
+      <!-- Displayed item with the image and Title  -->
       <div class="col item-display">
         <div class="card shadow-sm">
           <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg"
@@ -191,7 +211,7 @@
           <a class="brand" href="#">BluePrint</a>
         </div>
       </div>
-
+      <!-- Displayed item with the image and Title  -->
       <div class="col item-display">
         <div class="card shadow-sm">
           <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg"
@@ -206,7 +226,7 @@
           <a class="brand" href="#">BluePrint</a>
         </div>
       </div>
-
+      <!-- Displayed item with the image and Title  -->
       <div class="col item-display">
         <div class="card shadow-sm">
           <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg"
@@ -227,8 +247,11 @@
     <!-- Best Sellers  -->
     <br>
     <h2>Best Sellers</h2>
+    <!-- Adds a line to make it more styled   -->
     <hr class="breakline">
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 ">
+    <!-- Creates a div to group a class of Displayed items  -->
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-5">
+      <!-- Displayed item with the image and Title  -->
       <div class="col item-display">
         <div class="card shadow-sm">
           <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg"
@@ -243,7 +266,7 @@
           <a class="brand" href="#">BluePrint</a>
         </div>
       </div>
-
+      <!-- Displayed item with the image and Title  -->
       <div class="col item-display">
         <div class="card shadow-sm">
           <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg"
@@ -258,7 +281,7 @@
           <a class="brand" href="#">BluePrint</a>
         </div>
       </div>
-
+      <!-- Displayed item with the image and Title  -->
       <div class="col item-display">
         <div class="card shadow-sm">
           <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg"
@@ -273,7 +296,7 @@
           <a class="brand" href="#">BluePrint</a>
         </div>
       </div>
-
+      <!-- Displayed item with the image and Title  -->
       <div class="col item-display">
         <div class="card shadow-sm">
           <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg"
@@ -288,7 +311,7 @@
           <a class="brand" href="#">BluePrint</a>
         </div>
       </div>
-
+      <!-- Displayed item with the image and Title  -->
       <div class="col item-display">
         <div class="card shadow-sm">
           <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg"
@@ -312,12 +335,7 @@
   <!-- Code for footer -->
 
   <svg xmlns="http://www.w3.org/2000/svg" style="display:flow-root; height:70px">
-    <symbol id="bootstrap" viewBox="0 0 118 94">
-      <title>BarcelParts</title>
-      <path fill-rule="evenodd" clip-rule="evenodd"
-        d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z">
-      </path>
-    </symbol>
+    <!-- Adds the symbols of the Social networks to be displayed after  -->
     <symbol id="facebook" viewBox="0 0 16 16">
       <path
         d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
@@ -332,15 +350,18 @@
     </symbol>
   </svg>
 
+  <!-- Creates the footer with a container-fluid class so it goes all the webpage and fixes it to the bottom  -->
   <div class="container-fluid fixed-bottom">
+    <!-- Creates a footer and organizes how the content will be displayed -->
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
-      <div class="col-md-4 d-flex align-items-center">
+      <!-- Adds the logo and company name  -->
+      <div class="col-md-2 d-flex align-items-center">
         <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
           <a class="navbar-brand"><img class="Logo-footer" src="./Images/Logo.jpeg" alt=""></a>
         </a>
         <span class="text-muted">BarcelParts</span>
       </div>
-
+      <!-- Adds the Social accounts  -->
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
         <!-- <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li> -->
         <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/explore/tags/barcelparts/"><svg
