fixed an error with a dropdown button

--- a/Main_Page.html
+++ b/Main_Page.html
@@ -71,14 +71,14 @@
       <a class="navbar-brand" href="#">BarcelParts</a>
       <!-- Adds the research form  -->
       <div class="row justify-content-end">
-        <div class="col-10">
-          <form class="d-none d-md-flex d-lg-none">
+        <div class="col-10 d-none d-md-flex d-lg-none">
+          <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit" style="font-size: 10px;">Search</button>
           </form>
         </div>
         <!-- Adds the hamburger button that will appear when the page is shrunken to display the items in the navbar so it looks cleaner in small screens -->
-        <button class="col-2 navbar-toggler" type="button" data-bs-toggle="collapse"
+        <button class="col-md-2 navbar-toggler" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
           aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
