made changes to search button and added more logos

--- a/public/Main_Page.html
+++ b/public/Main_Page.html
@@ -74,7 +74,7 @@
         <div class="col-10 d-none d-md-flex d-lg-none">
           <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit" style="font-size: 10px;">Search</button>
+            <button class="btn btn-outline-secondary" type="submit" style="font-size: 10px;">Search</button>
           </form>
         </div>
         <!-- Adds the hamburger button that will appear when the page is shrunken to display the items in the navbar so it looks cleaner in small screens -->
@@ -116,13 +116,13 @@
         <!-- Adds the research form  -->
         <form class="d-flex d-md-none">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <button class="btn btn-outline-secondary" type="submit">Search</button>
         </form>
       </div>
   <!-- Adds the research form  -->
   <form class="d-none d-lg-flex">
     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success" type="submit">Search</button>
+    <button class="btn btn-outline-secondary" type="submit">Search</button>
   </form>
   </div>
   </nav>
@@ -189,7 +189,7 @@
             focusable="false">
             <title>Placeholder</title>
             <image width="100%" xlink:href="Images/Blueprint_logo.svg" x="0" y="0" />
-            <text x="50%" y="50%" fill="#eceeef" dy=".3em">SWAG</text>
+            <text x="50%" y="50%" fill="#eceeef" dy=".3em">BluePrint</text>
           </svg>
         </div>
         <div class="card-body">
@@ -203,12 +203,12 @@
             role="img" aria-label="Placeholder: Thumbnail" viewBox="0 0 250 250" preserveAspectRatio="xMidYMid slice"
             focusable="false">
             <title>Placeholder</title>
-            <image width="100%" xlink:href="Images/Blueprint_logo.svg" x="0" y="0" />
-            <text x="50%" y="50%" fill="#eceeef" dy=".3em">SWAG</text>
+            <image width="100%" xlink:href="Images/SKF_logo.svg" x="0" y="0" />
+            <text x="50%" y="50%" fill="#eceeef" dy=".3em">SKF</text>
           </svg>
         </div>
         <div class="card-body">
-          <a class="brand" href="#">BluePrint</a>
+          <a class="brand" href="#">SKF</a>
         </div>
       </div>
       <!-- Displayed item with the image and Title  -->
@@ -218,12 +218,12 @@
             role="img" aria-label="Placeholder: Thumbnail" viewBox="0 0 250 250" preserveAspectRatio="xMidYMid slice"
             focusable="false">
             <title>Placeholder</title>
-            <image width="100%" xlink:href="Images/Blueprint_logo.svg" x="0" y="0" />
+            <image width="100%" xlink:href="Images/SWAG_logo.svg" x="0" y="0" />
             <text x="50%" y="50%" fill="#eceeef" dy=".3em">SWAG</text>
           </svg>
         </div>
         <div class="card-body">
-          <a class="brand" href="#">BluePrint</a>
+          <a class="brand" href="#">SWAG</a>
         </div>
       </div>
       <!-- Displayed item with the image and Title  -->
@@ -233,12 +233,12 @@
             role="img" aria-label="Placeholder: Thumbnail" viewBox="0 0 250 250" preserveAspectRatio="xMidYMid slice"
             focusable="false">
             <title>Placeholder</title>
-            <image width="100%" xlink:href="Images/Blueprint_logo.svg" x="0" y="0" />
-            <text x="50%" y="50%" fill="#eceeef" dy=".3em">SWAG</text>
+            <image width="100%" xlink:href="Images/Trust_logo.svg" x="0" y="0" />
+            <text x="50%" y="50%" fill="#eceeef" dy=".3em">Trust</text>
           </svg>
         </div>
         <div class="card-body">
-          <a class="brand" href="#">BluePrint</a>
+          <a class="brand" href="#">Trust</a>
         </div>
       </div>
       <!-- Displayed item with the image and Title  -->
