testing some item displaying

--- a/public/Main_Page.html
+++ b/public/Main_Page.html
@@ -288,11 +288,26 @@
             focusable="false">
             <title>Placeholder</title>
             <image width="100%" xlink:href="Images/Blueprint_logo.svg" x="0" y="0" />
-            <text x="50%" y="50%" fill="#eceeef" dy=".3em">SWAG</text>
+            <text x="50%" y="50%" fill="#eceeef" dy=".3em">Metal-Rubber</text>
           </svg>
         </div>
-        <div class="card-body">
-          <a class="brand" href="#">BluePrint</a>
+        <div class="card-item-body">
+          <a class="item d-flex" href="#">Bellows Transmission, Direction and Suspension</a>
+        </div>
+      </div>
+      <!-- Displayed item with the image and Title  -->
+      <div class="col item-display">
+        <div class="card shadow-sm">
+          <svg class="bd-placeholder-img card-img-top" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+            role="img" aria-label="Placeholder: Thumbnail" viewBox="0 0 250 250" preserveAspectRatio="xMidYMid slice"
+            focusable="false">
+            <title>Placeholder</title>
+            <image width="100%" xlink:href="Images/Blueprint_logo.svg" x="0" y="0" />
+            <text x="50%" y="50%" fill="#eceeef" dy=".3em">UNIVERSAL ACCESSORIES</text>
+          </svg>
+        </div>
+        <div class="card-item-body">
+          <a class="item d-flex" href="#">UNIVERSAL ACCESSORIES</a>
         </div>
       </div>
       <!-- Displayed item with the image and Title  -->
@@ -306,23 +321,8 @@
             <text x="50%" y="50%" fill="#eceeef" dy=".3em">SWAG</text>
           </svg>
         </div>
-        <div class="card-body">
-          <a class="brand" href="#">BluePrint</a>
-        </div>
-      </div>
-      <!-- Displayed item with the image and Title  -->
-      <div class="col item-display">
-        <div class="card shadow-sm">
-          <svg class="bd-placeholder-img card-img-top" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-            role="img" aria-label="Placeholder: Thumbnail" viewBox="0 0 250 250" preserveAspectRatio="xMidYMid slice"
-            focusable="false">
-            <title>Placeholder</title>
-            <image width="100%" xlink:href="Images/Blueprint_logo.svg" x="0" y="0" />
-            <text x="50%" y="50%" fill="#eceeef" dy=".3em">SWAG</text>
-          </svg>
-        </div>
-        <div class="card-body">
-          <a class="brand" href="#">BluePrint</a>
+        <div class="card-item-body">
+          <a class="item d-flex" href="#">BluePrint</a>
         </div>
       </div>
       <!-- Displayed item with the image and Title  -->
