deactivated dark-mode

--- a/public/Main_Page.html
+++ b/public/Main_Page.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en" class="dark-mode">
+<!-- To use dark mode add to the class dark-mode -->
+<html lang="en" class="">
 
 <head>
   <!-- Required meta tags -->
