linked product page

--- a/public/Product_Page.html
+++ b/public/Product_Page.html
@@ -36,7 +36,7 @@
   <!-- Website JavaScript -->
   <script src=".\Scripts\javascript.js"></script>
 
-  <title>Main Page</title>
+  <title>Product Page</title>
 </head>
 
 <!-- Main Website code -->
@@ -137,7 +137,7 @@
 
           <!-- Other navbar items that will appear in the navbar -->
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Catalog</a>
+            <a class="nav-link" aria-current="page" href="./Product_Page.html">Catalog</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">News</a>
