--- a/public/Main_Page.html
+++ b/public/Main_Page.html
@@ -137,7 +137,7 @@
 
           <!-- Other navbar items that will appear in the navbar -->
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Catalog</a>
+            <a class="nav-link" aria-current="page" href="./Product_Page.html">Catalog</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">News</a>
