--- a/public/Product_Page.html
+++ b/public/Product_Page.html
@@ -88,7 +88,7 @@
     <!-- Uses the class container fluid to have the navbar expand all the page -->
     <div class="container-fluid">
       <!-- Adds the Company name to the navbar -->
-      <a class="navbar-brand" href="#">BarcelParts</a>
+      <a class="navbar-brand" href="./Main_Page.html">BarcelParts</a>
       <!-- Adds the research form  -->
       <div class="row justify-content-end">
         <div class="col-10 d-none d-md-flex d-lg-none">
