starting the user frontend

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,8 @@
 
     <link rel="stylesheet" href="/Assets/Css/dashboard.css">
 
+    <link rel="stylesheet" href="/Assets/Css/user.css">
+
     <title>BarcelParts</title>
   </head>
   <body>
